# sery-mcp

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  build.rs
.github/workflows/: ci.yml
src/: lib.rs  main.rs
